...
    <ScrollView contentContainerStyle={styles.container} contentInsetAdjustmentBehavior="automatic">
      <ListContainer>
        <NavigationRow
          metadata={appearancePreferenceLabels[preference]}
          onPress={() => navigation.navigate('Appearance')}
          showSeparator
          testID="settings-appearance"
          title="Utseende"
        />
        <NavigationRow
          metadata={visibilityPreference ? activeWorkoutVisibilityLabels[visibilityPreference] : 'Laster'}
          onPress={() => navigation.navigate('ActiveWorkoutVisibility')}
          showSeparator
          testID="settings-active-workout-visibility"
          title="Notifikasjoner"
        />
        <NavigationRow
          onPress={() => navigation.navigate('Data')}
          testID="settings-data"
          title="Dine data"
...
